--- a/style2.css
+++ b/style2.css
@@ -65,7 +65,6 @@ tr:nth-child(odd) {background: #FFF;}
 
 span.comment {
   color: #1871d6;
-  font: 12px/1.5 Helvetica, Arial, sans-serif;
 }
 
 table tbody tr:hover {
